test/good/classes/destructor06.px

class A def
    x: Char


class B: A def
    destructor def
        print this.x


a: A = B('B')
