test/bad/classes/type02.px

class A def
    Int x

class B def
    Int x

a = A()
a = B()
